# flujos-aereos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: README.md  clusters_turisticos.csv  flujos_int_conectividad.csv  historico_pasajeros.csv
docs/: tourism-investment-atlas-plan.md
scripts/: fix_airports.py  generar_datos_sinteticos.py  preparar_datos.py
src/: config.py  deploy.py  main.py
src/arclayer/: __init__.py
src/etl/: extract.py  load.py  transform.py
tests/: test_extract.py
